--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     }
 
     .loader-gif {
-      width: 460px;
+      width: 450px;
       height: auto;
       margin-bottom: 5px;
     }
 
     .loader-text {
-      font-size: 25px;
+      font-size: 20px;
       font-weight: 600;
       opacity: 0;
       transform: scale(0.95);
@@ -60,7 +60,7 @@
 
   <script>
     setTimeout(() => {
-      window.location.href = 'https://d5938c9f-e4b9-4d99-9afc-3e52bd9b7b27-00-1tu0uuy7cc63a.spock.replit.dev/';
+      window.location.href = 'https://6e6035bc-51a2-4e01-94bf-04e5f1486027-00-j2kfthea09pg.janeway.replit.dev/';
     },3000);
   </script>
 </body>
